--- a/Publications.tex
+++ b/Publications.tex
@@ -98,9 +98,8 @@
 \begin{document}
 
   \begin{flushleft}
-    \parindent 0pt
-    {\textsc{Publication list}}\\
-    \emph{Bastian Rieck}\\[0.5cm]
+ Publication list\\
+    \emph{Marco Aurelio Nu;o Maganda}\\[0.5cm]
   \end{flushleft}
 
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
