--- a/Publications.tex
+++ b/Publications.tex
@@ -99,7 +99,7 @@
 
   \begin{flushleft}
  Publication list\\
-    \emph{Marco Aurelio Nu;o Maganda}\\[0.5cm]
+    \emph{Marco Aurelio Nuño-Maganda}\\[0.5cm]
   \end{flushleft}
 
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
