--- a/Publications.tex
+++ b/Publications.tex
@@ -98,7 +98,7 @@
 \begin{document}
 
   \begin{flushleft}
- Publication list\\
+ Profesor Investigador en Ciencias de la Computación\\
     \emph{Marco Aurelio Nuño-Maganda}\\[0.5cm]
   \end{flushleft}
 
