--- a/Publications.tex
+++ b/Publications.tex
@@ -101,6 +101,8 @@
  Profesor Investigador en Ciencias de la Computación\\
     \emph{Marco Aurelio Nuño-Maganda}\\[0.5cm]
   \end{flushleft}
+  
+  Primera Version del Dr. Marco....
 
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   % Option I: \printbibliography
