--- a/Publications.tex
+++ b/Publications.tex
@@ -103,7 +103,15 @@
   \end{flushleft}
   
   Primera Version del Dr. Marco....
-
+  
+  
+  ToDo's:
+  \begin{itemize}
+  \item * Agreagr los .bib
+  \item * Agregar las evidencias
+  \item Sincronizar
+  \end{itemize}
+  
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   % Option I: \printbibliography
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
