--- a/Publications.bib
+++ b/Publications.bib
@@ -1,3 +1,13 @@
+@inproceedings{nuno2005real,
+  title={Real-time FPGA-based architecture for bicubic interpolation: an application for digital image scaling},
+  author={Nu{\~n}o-Maganda, Marco Aurelio and Arias-Estrada, Miguel O},
+  booktitle={2005 International Conference on Reconfigurable Computing and FPGAs (ReConFig'05)},
+  pages={8--pp},
+  year={2005},
+  organization={IEEE}
+}
+
+
 @InProceedings{Moor20a,
   author        = {Moor, Michael and Horn, Max and Rieck, Bastian and Borgwardt, Karsten},
   author+an     = {1=first; 2=first; 3=highlight,last; 4=last},
