--- a/Publications.tex
+++ b/Publications.tex
@@ -97,18 +97,18 @@
 
 \begin{document}
 
-  \begin{flushleft}
+  \begin{center}
  Profesor Investigador en Ciencias de la Computación\\
     \emph{Marco Aurelio Nuño-Maganda}\\[0.5cm]
-  \end{flushleft}
+  \end{center}
   
   Primera Version del Dr. Marco....
   
   
   ToDo's:
   \begin{itemize}
-  \item * Agreagr los .bib
-  \item * Agregar las evidencias
+  \item Agreagr los .bib
+  \item Agregar las evidencias
   \item Sincronizar
   \end{itemize}
   
