--- a/DifusionEnEventos.bib
+++ b/DifusionEnEventos.bib
@@ -9,7 +9,7 @@
 
 % Escenario 3 (Potencial cambio a Escenario1 dentro de algunos anos que se publique en Research in Computing Science)
 @unpublished{Difusion2024b,
-    author       = {Jesus Armando Martínez-Vargas and Said Polanco-Martagón and Yahir Hernández-Mier and \textbf{Marco Aurelio Nuño-Maganda}},
+    author       = {Jesus Armando Martínez-Vargas and Said Polanco-Martagón and Yahir Hernández-Mier and \textbf{M. A. Nuño-Maganda}},
     title        = {Detección de pimiento morron utilizando TinyML},
     howpublished = {XVI Congreso Mexiando de Inteligencia Artifical - COMIA 2024},
     note={ \hyperlink{./../Evidencias/applsci-10-06846.pdf.1}{EVIDENCE}},
@@ -19,7 +19,7 @@
 
 % Escenario 3 
 @unpublished{Difusion2024a,
-    author       = {César Aldair Flores-Gámez and Vaneza Itsaiana García-Cervantes and José Alan González-Perales and Aníbal González-Tovar and \textbf{Marco Aurelio Nuño-Maganda}},
+    author       = {César Aldair Flores-Gámez and Vaneza Itsaiana García-Cervantes and José Alan González-Perales and Aníbal González-Tovar and \textbf{M. A. Nuño-Maganda}},
     title        = {Aplicación Móvil para Editar DFAs y NFAs con Conversión a Latex},
     howpublished = {Congreso de la Red de Investigación Interinstitutional (CIREDII)},
     note={ \hyperlink{./../Evidencias/applsci-10-06846.pdf.1}{EVIDENCE}},
@@ -30,7 +30,7 @@
 
 % Escenario 1 - Revista
 @unpublished{Difusion2023a,
-    author = {Jorge Jhovan Rodríguez-Moreno and Osiel Alejandro Ordoñez-Cruz and Jorge Guevara-García and José Andrik Martínez-Rodríguez and Christopher Emmanuel Perez-Duque and \textbf{Marco Aurelio Nuño-Maganda}},
+    author = {Jorge Jhovan Rodríguez-Moreno and Osiel Alejandro Ordoñez-Cruz and Jorge Guevara-García and José Andrik Martínez-Rodríguez and Christopher Emmanuel Perez-Duque and \textbf{M. A. Nuño-Maganda}},
 	title = {Implementación de interfaz gráfica en PyQt5 referente a la visualización de pérdida de clasificación lineal},
     howpublished = {XIII Congreso Nacional de Ciencias de la Computación CONACIC 2023},
     note={ \hyperlink{./../Evidencias/sensors-18-02202-v2.pdf.1}{EVIDENCE}},
@@ -40,7 +40,7 @@
 
 % Escenario 1 - BookChapter
 @unpublished{Difusion2023b,
-    author      = {Lilian Sayli García-Puente and Kevin Alejandro Hernández-Campillo and César Zavala-López and José Emmanuel Gonzáles-Santana and \textbf{Marco Aurelio Nuño-Maganda}},
+    author      = {Lilian Sayli García-Puente and Kevin Alejandro Hernández-Campillo and César Zavala-López and José Emmanuel Gonzáles-Santana and \textbf{M. A. Nuño-Maganda}},
     title       = {Explorando árboles de decisión: Una herramienta interactiva para comprender el aprendizaje supervisado},
     howpublished = {XIII Congreso Nacional de Ciencias de la Computación CONACIC 2023},
     year = 2023,
@@ -49,7 +49,7 @@
 
 % Escenario 1 - BookChapter
 @unpublished{Difusion2023c,
-    author      = {{Nubia Esmeralda Cantú-Sánchez and César Aldahir Flores-Gámez and José Antonio Cumpean-Morales and Francisco Gael Sustaita-Reina and Mauricio Hernández-Cepeda and \textbf{Marco Aurelio Nuño-Maganda}}},
+    author      = {Nubia Esmeralda Cantú-Sánchez and César Aldahir Flores-Gámez and José Antonio Cumpean-Morales and Francisco Gael Sustaita-Reina and Mauricio Hernández-Cepeda and \textbf{M. A. Nuño-Maganda}},
     title       = {Sistema de Simulación del Algoritmo Perceptrón para Redes Neuronales en Python},    
     howpublished = {XIII Congreso Nacional de Ciencias de la Computación CONACIC 2023},
     year = 2023,
@@ -69,7 +69,7 @@
 
 % Escenario 1 - Memoria
 @unpublished{Difusion2022b,
-	author = {Juan Carlos Monreal-Romero and María Fernanda Coronado-Alejos and Diana Gabriela González-Reyes and Ana Gabriela López-Reyes and Carlos Alberto Reyes-Puga and \textbf{Marco Aurelio Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón},
+	author = {Juan Carlos Monreal-Romero and María Fernanda Coronado-Alejos and Diana Gabriela González-Reyes and Ana Gabriela López-Reyes and Carlos Alberto Reyes-Puga and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón},
 	title = {Desarrollo e Implementación de una Aplicación para administrar préstamos de libros y dispositivos electrónicos},
     howpublished = {1er Congreso Internacional de Mecatrónica, Control e Inteligencia Artificial},
 	year = {2022},	
@@ -78,7 +78,7 @@
 
 % Escenario 1 - Memoria
 @unpublished{Difusion2022c,
-	author = {Orlando Samuel Martínez Dorantes and Karla Yaneth Martínez Quintanilla and Jorge Eduardo Monita Rodríguez and Mariana Leilany Pineda Amador and Juan José Torres Grimaldo and Marco Aurelio Nuño-Maganda and Yahir Hernández-Mier and Said Polanco-Martagón},
+	author = {Orlando Samuel Martínez Dorantes and Karla Yaneth Martínez Quintanilla and Jorge Eduardo Monita Rodríguez and Mariana Leilany Pineda Amador and Juan José Torres Grimaldo and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón},
 	title = {Implementación de un Recorrido Virtual de la Universidad Politécnica de Victoria para Promoción de los programas académicos en Preparatorias},
     howpublished = {1er Congreso Internacional de Mecatrónica, Control e Inteligencia Artificial},
 	year = {2022},	
@@ -87,7 +87,7 @@
 
 % Escenario 1 - Memoria
 @unpublished{Difusion2022d,
-	author = {José Carlos Ávalos-Ruiz and Axel Issai Alemán-Delgado and Juan de Dios Nava-Gallardo, José Manuel Rodríguez García and Orlando Samuel Martínez Dorantes and Marco Aurelio Nuño-Maganda and Yahir Hernández-Mier and Said Polanco-Martagón},
+	author = {José Carlos Ávalos-Ruiz and Axel Issai Alemán-Delgado and Juan de Dios Nava-Gallardo, José Manuel Rodríguez García and Orlando Samuel Martínez Dorantes and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón},
 	title = {Desarrollo e Implementación de una Aplicación Móvil para facilitar el Control de Asistencia a Clase},
     howpublished = {1er Congreso Internacional de Mecatrónica, Control e Inteligencia Artificial},
 	year = {2022},	
@@ -96,7 +96,7 @@
 
 % Escenario 1 - Memoria
 @unpublished{Difusion2022e,
-	author = {José Carlos Mar-Rangel and Marco Aurelio Nuño-Maganda and Yahir Hernández-Mier and Said Polanco-Martagón},
+	author = {José Carlos Mar-Rangel and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón},
 	title = {Aplicación Móvil para el Entrenamiento en Concursos de Spelling Utilizando Síntesis y Reconocimiento de Voz},
     howpublished = {1er Congreso Internacional de Mecatrónica, Control e Inteligencia Artificial},
 	year = {2022},	
@@ -105,7 +105,7 @@
 
 % Escenario 1 - Revista
 @unpublished{Difusion2022f,
-	author = {Dino Tonatiuh Gutierrez-Martinez and Marlly Yuleth Cantú-Charles and Jesus Eduardo Uriegas-Ibarra and \textbf{Marco Aurelio Nuño-Maganda} },
+	author = {Dino Tonatiuh Gutierrez-Martinez and Marlly Yuleth Cantú-Charles and Jesus Eduardo Uriegas-Ibarra and \textbf{M. A. Nuño-Maganda} },
 	title = {{Simulación de brazo robótico en dispositivos móviles utilizando OpenGL ES}},
 	howpublished ={Congreso Nacional de Investigacion Interinstitucional (CNII) 2022},
 	year = {2022},	
@@ -114,7 +114,7 @@
 
 % Escenario 1 - Revista
 @unpublished{Difusion2022g,
-	author = {David Josué Esquivel-Godoy and   \textbf{Marco Aurelio Nuño-Maganda} and  Yahir Hernández-Mier and  Said Polanco-Martagón},
+	author = {David Josué Esquivel-Godoy and   \textbf{M. A. Nuño-Maganda} and  Yahir Hernández-Mier and  Said Polanco-Martagón},
 	title = {Módulos de supervisión y automatización de un sistema hidropónico mediante lógica difusa y visión por computadora},
 	howpublished ={Congreso Nacional de Investigacion Interinstitucional (CNII) 2022},
 	year = {2022},	
@@ -123,7 +123,7 @@
 
 % Escenario 1 - Revista
 @unpublished{Difusion2022h,
-	author = {\textbf{Marco Aurelio Nuño-Maganda} and Axel Issai Alemán-Delgado  and  Isaac De Jesús Becerra-Martínez  and  Karen Lizeth García-Rivera  and  Didre Dayan Mota-González  and  Daniela Estefanía Huerta-Vázquez  and  Carlos Alejandro Reyes-Puga},
+	author = {\textbf{M. A. Nuño-Maganda} and Axel Issai Alemán-Delgado  and  Isaac De Jesús Becerra-Martínez  and  Karen Lizeth García-Rivera  and  Didre Dayan Mota-González  and  Daniela Estefanía Huerta-Vázquez  and  Carlos Alejandro Reyes-Puga},
 	title = {{Integración de un escanner 3D con sensores ultrasónicos y una aplicación móvil para visualización de modelos tridimensionales}},
 	howpublished ={Congreso Nacional de Investigacion Interinstitucional (CNII) 2022},
 	year = {2022},	
@@ -132,7 +132,7 @@
 
 % Escenario 1 - Revista
 @unpublished{Difusion2022i,
-	AUTHOR = "Dino Tonatiuh Gutierrez-Martinez and Orlando Samuel Martinez-Dorantes and Juan Jose Torres-Grimaldo and Adriana Palmero-Torres and Ana Karen Echartea-Juarez and Angela Carrizales and Osiel Gómez and Gabriela Robles and \textbf{Marco Aurelio Nuño-Maganda}",
+	AUTHOR = "Dino Tonatiuh Gutierrez-Martinez and Orlando Samuel Martinez-Dorantes and Juan Jose Torres-Grimaldo and Adriana Palmero-Torres and Ana Karen Echartea-Juarez and Angela Carrizales and Osiel Gómez and Gabriela Robles and \textbf{M. A. Nuño-Maganda}",
 	TITLE = "{Aplicación móvil para consultar rutas de autobuses urbanos en Ciudad Victoria, Tamaulipas}",
 	howpublished ={22o Congreso Internacional de Ciencias de la Computación CORE 2022, modalidad virtual},
 	YEAR = "2022",
@@ -141,7 +141,7 @@
 
 % Escenario 1 - Revista
 @unpublished{Difusion2021a,
-	AUTHOR = "José Ramon Arratia-Zapata and \textbf{Marco Aurelio Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón",
+	AUTHOR = "José Ramon Arratia-Zapata and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón",
 	TITLE = "{Sistema de Monitoreo Remoto de Temperatura y Humedad Utilizando Dispositivos Móviles e IOT}",
 	YEAR = "2021",
 	month = {10},
@@ -150,7 +150,7 @@
 
 % Escenario 1 - Book CHapter
 @unpublished{Difusion2021b,
-    author      = {\textbf{Marco Aurelio Nuño-Maganda} and Jorge Arturo Hernández-Almazán and Yahir Hernández-Mier and Said Polanco-Martagón},
+    author      = {\textbf{M. A. Nuño-Maganda} and Jorge Arturo Hernández-Almazán and Yahir Hernández-Mier and Said Polanco-Martagón},
     title       = {Sistema de Análisis de Asistencia a Clases en Línea},
     year        = 2021,
     month = {10},
@@ -176,7 +176,7 @@
 
 % Escenario 1
 @unpublished{Difusion2019a,
-	author = {Victor Frausto-Güereña and Marco Aurelio Nuño-Maganda and Yahir Hernández-Mier},
+	author = {Victor Frausto-Güereña and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier},
 	title = {Estimación de la Tasa Metabólica Basal de las Personas Utilizando Técnicas de Inteligencia Artificial y Sensores},
     howpublished = {Congreso Internacional de Investigación Academia Journals 2019},
     year = 2019,
