--- a/DifusionEnEventos.bib
+++ b/DifusionEnEventos.bib
@@ -59,7 +59,7 @@
 
 % Escenario 1 - Revista
 @unpublished{Difusion2022a,
-	AUTHOR = "Beatriz Anshel Sánchez-García and Said Polanco-Martagón and Yahir Hernández-Mier and \textbf{Nuño-Maganda, Marco Aurelio} and Jorge Arturo Hernández-Almazán",
+	AUTHOR = "Beatriz Anshel Sánchez-García and Said Polanco-Martagón and Yahir Hernández-Mier and \textbf{M. A. Nuño-Maganda} and Jorge Arturo Hernández-Almazán",
 	TITLE = "{Suspicious Lung Disease Prediction from Auscultation Sounds Using Neural Networks}",
 	YEAR = "2022",
 	month = {11},
@@ -78,7 +78,7 @@
 
 % Escenario 1 - Memoria
 @unpublished{Difusion2022c,
-	author = {Orlando Samuel Martínez Dorantes and Karla Yaneth Martínez Quintanilla and Jorge Eduardo Monita Rodríguez and Mariana Leilany Pineda Amador and Juan José Torres Grimaldo and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón},
+	author = {Orlando Samuel Martínez-Dorantes and Karla Yaneth Martínez-Quintanilla and Jorge Eduardo Monita-Rodríguez and Mariana Leilany Pineda-Amador and Juan José Torres-Grimaldo and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón},
 	title = {Implementación de un Recorrido Virtual de la Universidad Politécnica de Victoria para Promoción de los programas académicos en Preparatorias},
     howpublished = {1er Congreso Internacional de Mecatrónica, Control e Inteligencia Artificial},
 	year = {2022},	
@@ -159,7 +159,7 @@
 
 % Escenario 1 - Memoria
 @unpublished{Difusion2021c,
-	author = {Daniel Humberto Villatoro-Carranco and \textbf{Marco Aurelio Nuño Maganda} and Yahir Hernández Mier and Said Polanco Martagon},
+	author = {Daniel Humberto Villatoro-Carranco and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagon},
 	title = {Comparación de detectores faciales para un sistema de videovigilancia de bajo costo},
 	howpublished ={6a. Jornada de Ciencia y Tecnología Aplicada},
 	year = {2021},	
@@ -167,7 +167,7 @@
 
 % Escenario 1 - Book CHapter
 @unpublished{Difusion2021d,
-	AUTHOR = "Cristian I. Echartea de la Rosa and \textbf{Marco Aurelio Nuño Maganda} and Yahir Hernández Mier and Said Polanco Martagón",
+	AUTHOR = "Cristian Isidro Echartea-de-la-Rosa and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón",
 	TITLE = "{Creación de planes alimenticios mediante algoritmos genéticos para combatir la obesidad infantil en México}",
 	YEAR = "2021",
 	month = {3},
@@ -185,10 +185,10 @@
 
 % Escenario 1
 @unpublished{Difusion2011a,
-    author       = {},
+    author       = { \textbf{M. A. Nuño-Maganda}},
     title        = {Uso de Técnicas de Visión por Computadora y Aprendizaje Automático para Detección y Reconocimiento de Rostros},
-    howpublished = {},
+    howpublished = {V Congreso de Innovación Tecnológica de Eléctrica y Electrónica},
     year = 2011,
     month = 09,
-    addendum     = {Instituto Tecnológico de Ciudad Obregon, Sonora, México}}
+    addendum     = {Ciudad Obregon, Sonora, México}}
 
