--- a/DifusionEnEventos.bib
+++ b/DifusionEnEventos.bib
@@ -87,7 +87,7 @@
 
 % Escenario 1 - Memoria
 @unpublished{Difusion2022d,
-	author = {José Carlos Ávalos-Ruiz and Axel Issai Alemán-Delgado and Juan de Dios Nava-Gallardo, José Manuel Rodríguez García and Orlando Samuel Martínez Dorantes and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón},
+	author = {José Carlos Ávalos-Ruiz and Axel Issai Alemán-Delgado and Juan de Dios Nava-Gallardo and José Manuel Rodríguez García and Orlando Samuel Martínez Dorantes and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón},
 	title = {Desarrollo e Implementación de una Aplicación Móvil para facilitar el Control de Asistencia a Clase},
     howpublished = {1er Congreso Internacional de Mecatrónica, Control e Inteligencia Artificial},
 	year = {2022},	
