--- a/Publications.tex
+++ b/Publications.tex
@@ -6,22 +6,20 @@
 %------------------------
 
 % Curriculum Unificado: Mismo documento para obtener publicaciones, lista de platicas
-
-
 \documentclass[letterpaper,10pt]{article}
 
-\usepackage[
-colorlinks,
-linkcolor=blue,
-citecolor=green,
-pdftex=true,
-bookmarks=true,
-bookmarksopen=false,
-pdftitle={Listado de Publicaciones},
-pdfsubject={Reporte Final de Proyecto},
-pdfkeywords={FPGAs, Reconfigurable Computing, Machine Learning, Computer Vision},
-pdfauthor={Marco Aurelio Nu\~no Maganda}
-]{hyperref}
+%\usepackage[
+%colorlinks,
+%linkcolor=blue,
+%citecolor=green,
+%pdftex=true,
+%bookmarks=true,
+%bookmarksopen=false,
+%pdftitle={Listado de Publicaciones},
+%pdfsubject={Reporte Final de Proyecto},
+%pdfkeywords={FPGAs, Reconfigurable Computing, Machine Learning, Computer Vision},
+%pdfauthor={Marco Aurelio Nu\~no Maganda}
+%]{hyperref}
 
 \usepackage{pdfpages}
 
@@ -29,7 +27,7 @@ pdfauthor={Marco Aurelio Nu\~no Maganda}
 \usepackage[empty]{fullpage}
 \usepackage{titlesec}
 \usepackage{marvosym}
-\usepackage[usenames,dvipsnames]{color}
+%\usepackage[usenames,dvipsnames]{color}
 \usepackage{verbatim}
 \usepackage{enumitem}
 \usepackage[hidelinks]{hyperref}
@@ -236,25 +234,13 @@ pdfauthor={Marco Aurelio Nu\~no Maganda}
 
 \begin{document}
 
-%----------HEADING----------
-% \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-%   \textbf{\href{http://sourabhbajaj.com/}{\Large Sourabh Bajaj}} & Email : \href{mailto:sourabh@sourabhbajaj.com}{sourabh@sourabhbajaj.com}\\
-%   \href{http://sourabhbajaj.com/}{http://www.sourabhbajaj.com} & Mobile : +1-123-456-7890 \\
-% \end{tabular*}
-
 \begin{center}
     \textbf{\Large \scshape Marco Aurelio Nuño Maganda} \\ \vspace{1pt}
     \textit{Profesor Investigador en Ciencias de la Computación} \\
     Última Actualización: \today \\
-%    123-456-7890 $|$ \href{mailto:namesurname@gmail.com}{\underline{namesurname@gmail.com}} $|$ 
-%    \href{https://www.linkedin.com/in/namesurname/}{\underline{linkedin.com/in/namesurname/}} $|$
-%    \href{https://github.com/namesurname}{\underline{github.com/namesurname}}
 \end{center}
 
-%\vspace{2.5cm}
 \begin{minipage}{0.98 \textwidth} % 0.5 \textwidth = 50% ancho de página
-%\begin{center}
-%Nombre: \textbf{Marco Aurelio Nu\~{n}o Maganda} \\
 Fecha de Nacimiento: \textbf{12 de Agosto de 1978} \\
 Lugar de Nacimiento: \textbf{Mexico, D. F.}\\
 Nacionalidad: \textbf{Mexicana}\\
@@ -269,13 +255,6 @@ Research Gate:\ \ \textbf{\url{https://www.researchgate.net/profile/Marco_Nuno}}
 Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-nuno-maganda}}\\
 \end{minipage}
 
-
-%-----------SUMMARY-----------
-%\section*{Summary}
-
-%Results-oriented and detail-driven Automation Quality Engineer with a strong background in Java programming and a passion for ensuring software reliability. Experienced in designing, implementing, and executing automated test scripts to verify the functionality and performance of software applications. Proven track record of collaborating with development teams to identify and resolve issues early in the development process. Adept at utilizing testing frameworks such as JUnit and incorporating continuous integration tools like Jenkins. Skilled in creating and maintaining automated test suites for web and mobile applications. Committed to delivering high-quality software by applying industry best practices in testing and automation. Seeking opportunities to contribute technical expertise and enhance software development processes as an Automation Quality Engineer.
-
-%-----------PROGRAMMING SKILLS-----------
 
 \section{Educación}
  \begin{itemize}[leftmargin=0.15in, label={}]
