--- a/Publications.tex
+++ b/Publications.tex
@@ -317,7 +317,7 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 
 
 
-\section{Divulgacion Ciencia y Tecnologia}
+\section{Divulgación de la Ciencia y la Tecnología}
 \begin{refsection}[DivulgacionCienciaTecnologia]
 \nocite{*}
 %\printbibliography[title={Divulgacion de Ciencia y Tecnologia}, keyword=DCyT, resetnumbers=true]
@@ -330,7 +330,7 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 
 
 
-\section{Ponencias en Congresos Internacionales en Inglés}
+\section{Articulos Publicados en Memorias de Congresos en Inglés}
 \begin{refsection}[CongresosArb]
 \nocite{*}
 %\printbibliography[title={Ponencias en Congresos Internacionales en Inglés}, keyword=four, resetnumbers=true]
@@ -339,14 +339,14 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 
 
 
-\section{Ponencias en Congresos en Espanol}
+\section{Articulos Publicados en Memorias de Congresos en Español}
 \begin{refsection}[CongresosEspanol]
 \nocite{*}
 %\printbibliography[title={Ponencias en Congresos Internacionales en Espanol}, keyword=five, resetnumbers=true]
 \printbibliography[heading={none}, keyword=five, resetnumbers=true]
 \end{refsection}
 
-\section{Revistas Arbitradas e Indexadas}
+\section{Articulos Publicados en Revistas Arbitradas e Indexadas}
 \begin{refsection}[Revistas]
 \nocite{*}
 %\printbibliography[title={First Bibliography}, keyword=three, resetnumbers=true]
