--- a/ListaGlobalPublicaciones/CronologicoBiber2.tex
+++ b/ListaGlobalPublicaciones/CronologicoBiber2.tex
@@ -80,7 +80,7 @@ pdfauthor={Marco Aurelio Nu\~no Maganda}
 
 \begin{center}
 \small \'Ultima Actualizaci\'on: \today\ \\
-{\Huge {Listado de Productos Científicos y Tecnológicos y Formación de Recursos Humanos\\
+{\Huge {Listado Cronológico de Productos Científicos y Tecnológicos\\
  }
 \normalsize
 \underline{DR. MARCO AURELIO NU\~{N}O MAGANDA} \\
