--- a/Revistas.bib
+++ b/Revistas.bib
@@ -1,6 +1,22 @@
 % Encoding: UTF-8
 % Revistas JCR, SCIMAGOJR o LATININDEX
 
+@article{MarcoNuno_Revista_2024_06_00,
+    author = {José Fidencio López-Luna and Eddie Nahúm Armendáriz-Mireles and \textbf{M. A. Nuño-Maganda} and Hiram Herrera-Rivas and Rubén Machucho-Cadena and Jorge Arturo Hernández-Almazán},
+    title ={Design and validation of a preliminary instrument to contextualize interactions through information technologies of health professionals},
+    journal = {Health Informatics Journal},
+    volume = {30},
+    number = {2},
+    pages = {14604582241259323},
+    year = {2024},
+    doi = {10.1177/14604582241259323},
+        note ={PMID: 38886113},
+    URL = { https://doi.org/10.1177/14604582241259323},
+    eprint = {https://doi.org/10.1177/14604582241259323}
+}
+
+
+
 
 @Article{MarcoNuno_Revista_2023_10_00,
 	AUTHOR = "Jorge de la Calleja and Elsa de la Calleja and Hujo Jair-Escalante and Eduardo López-Domínguez and María Áuxilio Medina-Nieto and \textbf{M. A. Nuño-Maganda}",
