--- a/ListaGlobalPublicaciones/Tabla.tex
+++ b/ListaGlobalPublicaciones/Tabla.tex
@@ -1,6 +1,6 @@
 %Lista Articulos
 \newcounter{conteoarticulos}
-\setcounter{conteoarticulos}{93}
+\setcounter{conteoarticulos}{94}
 \begin{longtable}{p{0.5cm}|p{14.0cm}|p{2cm}}
 \hline
 \textbf{\#} &
@@ -14,6 +14,8 @@
 \multicolumn{3}{c}{Continúa en la siguiente página} \\ 
 \endfoot 
 \endlastfoot 
+\theconteoarticulos&\fullcite{MarcoNuno_Revista_2024_06_00}&\\ \hline 
+\addtocounter{conteoarticulos}{-1}
 \theconteoarticulos&\fullcite{MarcoNuno_CongArbEsp_2023_10_02A}&\\ \hline 
 \addtocounter{conteoarticulos}{-1}
 \theconteoarticulos&\fullcite{MarcoNuno_CongArbEsp_2023_10_02B}&\\ \hline 
