--- a/Publications.tex
+++ b/Publications.tex
@@ -37,18 +37,6 @@
 \input{glyphtounicode}
 
 
-%----------FONT OPTIONS----------
-% sans-serif
-% \usepackage[sfdefault]{FiraSans}
-% \usepackage[sfdefault]{roboto}
-% \usepackage[sfdefault]{noto-sans}
-% \usepackage[default]{sourcesanspro}
-
-% serif
-% \usepackage{CormorantGaramond}
-% \usepackage{charter}
-
-
 \pagestyle{fancy}
 \fancyhf{} % clear all header and footer fields
 \fancyfoot{}
@@ -299,7 +287,7 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 
  \end{itemize}
 
-% De uso exclusivo UPV - Duplicados entre Congresos, Cap de Libro y Revistas
+% De uso exclusivo UPV
 \section{Cursos}
 \begin{refsection}[Cursos]
 \nocite{*}
@@ -325,6 +313,12 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 \end{refsection}
 
 
+\section{Articulos Publicados en Revistas Arbitradas e Indexadas}
+\begin{refsection}[Revistas]
+\nocite{*}
+%\printbibliography[title={First Bibliography}, keyword=three, resetnumbers=true]
+\printbibliography[heading={none}, keyword=three, resetnumbers=true]
+\end{refsection}
 
 
 
@@ -346,12 +340,6 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 \printbibliography[heading={none}, keyword=five, resetnumbers=true]
 \end{refsection}
 
-\section{Articulos Publicados en Revistas Arbitradas e Indexadas}
-\begin{refsection}[Revistas]
-\nocite{*}
-%\printbibliography[title={First Bibliography}, keyword=three, resetnumbers=true]
-\printbibliography[heading={none}, keyword=three, resetnumbers=true]
-\end{refsection}
 
 
 \section{Tesis de Maestría Dirigidas}
