--- a/Publications.tex
+++ b/Publications.tex
@@ -30,7 +30,9 @@
 %\usepackage[usenames,dvipsnames]{color}
 \usepackage{verbatim}
 \usepackage{enumitem}
-\usepackage[hidelinks]{hyperref}
+\usepackage[colorlinks,
+linkcolor=blue,
+citecolor=green]{hyperref}
 \usepackage{fancyhdr}
 \usepackage[spanish]{babel}
 \usepackage{tabularx}
