--- a/Publications.tex
+++ b/Publications.tex
@@ -191,6 +191,12 @@ citecolor=green]{hyperref}
       \step[fieldset=keywords, fieldvalue={, }, appendstrict]
       \step[fieldset=keywords, fieldvalue=CURSOS, append]
     }
+    \map{
+      \perdatasource{ColaboradorProyectos.bib}
+      \step[fieldset=keywords, fieldvalue={, }, appendstrict]
+      \step[fieldset=keywords, fieldvalue=COLABPROYECTOS, append]
+    }
+
   }
 }
 
@@ -213,6 +219,7 @@ citecolor=green]{hyperref}
 \addbibresource{DivulgacionCienciaTecnologia.bib}
 \addbibresource{DifusionEnEventos.bib}
 \addbibresource{Cursos.bib}
+\addbibresource{ColaboradorProyectos.bib}
 
 
 \newcounter{num}
@@ -292,6 +299,13 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 % De uso exclusivo UPV
 \section{Cursos}
 \begin{refsection}[Cursos]
+\nocite{*}
+\printbibliography[heading={none}, keyword=COLABPROYECTOS, resetnumbers=true]
+\end{refsection}
+
+% De uso exclusivo UPV
+\section{Colaborador en Proyectos de Investigacion y Desarrollo Tecnológico}
+\begin{refsection}[ColaboradorPI_DT]
 \nocite{*}
 \printbibliography[heading={none}, keyword=CURSOS, resetnumbers=true]
 \end{refsection}
