--- a/Publications.tex
+++ b/Publications.tex
@@ -213,7 +213,7 @@ citecolor=green]{hyperref}
 \addbibresource{DivulgacionCienciaTecnologia.bib}
 \addbibresource{DifusionEnEventos.bib}
 \addbibresource{Cursos.bib}
-\addbibresource{ColaboradorProyectos.bib}
+%\addbibresource{ColaboradorProyectos.bib}
 
 
 \newcounter{num}
@@ -294,14 +294,14 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 \section{Cursos}
 \begin{refsection}[Cursos]
 \nocite{*}
-\printbibliography[heading={none}, keyword=COLABPROYECTOS, resetnumbers=true]
+\printbibliography[heading={none}, keyword=CURSOS, resetnumbers=true]
 \end{refsection}
 
 % De uso exclusivo UPV
 \section{Colaborador en Proyectos de Investigacion y Desarrollo Tecnológico}
 \begin{refsection}[ColaboradorPI_DT]
 \nocite{*}
-\printbibliography[heading={none}, keyword=CURSOS, resetnumbers=true]
+\printbibliography[heading={none}, keyword=COLABPROYECTOS, resetnumbers=true]
 \end{refsection}
 
 
