--- a/Publications.tex
+++ b/Publications.tex
@@ -191,6 +191,12 @@ citecolor=green]{hyperref}
       \step[fieldset=keywords, fieldvalue={, }, appendstrict]
       \step[fieldset=keywords, fieldvalue=CURSOS, append]
     }
+    \map{
+      \perdatasource{ColaboradorProyectos.bib}
+      \step[fieldset=keywords, fieldvalue={, }, appendstrict]
+      \step[fieldset=keywords, fieldvalue=COLABORADORPROYECTOS, append]
+    }
+
   }
 }
 
@@ -213,7 +219,7 @@ citecolor=green]{hyperref}
 \addbibresource{DivulgacionCienciaTecnologia.bib}
 \addbibresource{DifusionEnEventos.bib}
 \addbibresource{Cursos.bib}
-%\addbibresource{ColaboradorProyectos.bib}
+\addbibresource{ColaboradorProyectos.bib}
 
 
 \newcounter{num}
