--- a/Publications.tex
+++ b/Publications.tex
@@ -194,9 +194,8 @@ citecolor=green]{hyperref}
     \map{
       \perdatasource{ColaboradorProyectos.bib}
       \step[fieldset=keywords, fieldvalue={, }, appendstrict]
-      \step[fieldset=keywords, fieldvalue=COLABORADORPROYECTOS, append]
+      \step[fieldset=keywords, fieldvalue=COLABORADOR, append]
     }
-
   }
 }
 
